tests/transpiler/x/rs/string_index.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/string_index.rs:3:21
  |
3 |     let s: String = "mochi";
  |            ------   ^^^^^^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected `String`, found `&str`
  |            expected due to this

error[E0277]: the type `str` cannot be indexed by `{integer}`
 --> /workspace/mochi/tests/transpiler/x/rs/string_index.rs:4:22
  |
4 |     println!("{}", s[1]);
  |                      ^ string indices are ranges of `usize`
  |
  = note: you can use `.chars().nth()` or `.bytes().nth()`
          for more information, see chapter 8 in The Book: <https://doc.rust-lang.org/book/ch08-02-strings.html#indexing-into-strings>
  = help: the trait `SliceIndex<str>` is not implemented for `{integer}`
          but trait `SliceIndex<[_]>` is implemented for `usize`
  = help: for that trait implementation, expected `[_]`, found `str`
  = note: required for `String` to implement `Index<{integer}>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
