tests/transpiler/x/rs/string_index.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:54 +0700
fn main() {
    let s: String = "mochi";
    println!("{}", s[1]);
}
